<resources>
    <string name="app_name"> WBCCT - Baseline </string>
    <string name="btnDownload" translatable="false"> Download Data</string>
    <string name="btnUpload">Upload Data</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="splashText"> </string>
    <string name="check_pending_forms">CHECK PENDING FORMS</string>
    <string name="start_interview" translatable="false">START INTERVIEW</string>
    <string name="start_data_entry" translatable="false">START DATA ENTRY</string>
    <string name="open_anthro_form" translatable="false">UPDATE ANTHRO FORM</string>
    <string name="open_blood_form" translatable="false">UPDATE BLOOD INFORMANTION</string>
    <string name="open_stool_form" translatable="false">UPDATE STOOL INFORMANTION</string>
    <string name="records_summary"> Records Summary </string>
    <string name="main_menu"> Main Menu </string>
    <string name="only_for_testing">ONLY FOR TESTING</string>
    <string name="database">Database</string>
    <string name="region" translatable="false">REGION</string>
    <string name="district" translatable="false">DISTRICT</string>
    <string name="uc" translatable="false">UC</string>
    <string name="cityVillage" translatable="false"> City / Village </string>
    <string name="childScreening" translatable="false"> Child Screening </string>
    <string name="childFollowup" translatable="false"> Child Follow-up </string>
    <string name="wraScreening" translatable="false"> WRAs Screening </string>
    <string name="wraFollowup" translatable="false"> WRAs Follow-up </string>
    <string name="btnSave" translatable="false"> Save </string>
    <string name="btnEnd" translatable="false"> Cancel </string>
    <string name="signin" translatable="false"> SIGN IN </string>
    <string name="username" translatable="false"> Username </string>
    <string name="password" translatable="false">Password</string>
    <string name="newPassword" translatable="false">New Password</string>
    <string name="confirmPassword" translatable="false">Confirm Password</string>
    <string name="btnResetPassword" translatable="false">Reset Password</string>
    <string name="country" translatable="false"> Language (Click to change) </string>
    <string name="pakistan" translatable="false"> Pakistan </string>
    <string name="tajikistan" translatable="false"> Tajikistan </string>
    <string name="btnLogin" translatable="false"> Login </string>
    <string name="btnDownloadData" translatable="false"> Download Data </string>
    <string name="cs_MAexist" translatable="false"> might be already exist</string>
    <string name="netwrok" translatable="false">Network connection not available!</string>
    <string name="invalidpass" translatable="false">Invalid Password</string>
    <string name="unameRequired" translatable="false">Username is required.</string>
    <string name="incorrcetPass" translatable="false">Incorrect Password</string>
    <string name="downData" translatable="false">Download Data</string>
    <string name="permission" translatable="false">Permissions Required</string>
    <string name="warning" translatable="false">Warning</string>
    <string name="newApp" translatable="false">New App downloaded!!</string>
    <string name="appVer" translatable="false">App New Version</string>
    <string name="btnSync" translatable="false">Download Data</string>
    <string name="downloaded" translatable="false">Downloaded</string>
    <string name="appDownload" translatable="false">appDownload</string>
    <string name="newVer" translatable="false">New Version</string>
    <string name="downloading" translatable="false">Downloading</string>
    <string name="available" translatable="false">Available</string>
    <string name="downError" translatable="false">Cant download.. Internet connectivity issue!</string>
    <string name="backBtn" translatable="false">Press Back again to Exit</string>
    <string name="noNetwork" translatable="false">No network connection available!</string>
    <string name="appAvailable" translatable="false">APP is available!</string>
    <string name="oldAppMsg" translatable="false">App Ver." + " is now available. Your are currently using older Ver."</string>
    <string name="installNewApp" translatable="false">Install new version to use this app</string>
    <string name="install" translatable="false">Install</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="complete" translatable="false">complete</string>
    <string name="updatingError" translatable="false">Error in updating db!!</string>
    <string name="updateDbError1" translatable="false">"Sorry. You can't go further."</string>
    <string name="updateDbError2" translatable="false">"Please contact IT Team (Failed to update DB)"</string>
    <string name="bckBtn" translatable="false">You Cant go back</string>
    <string name="processing" translatable="false">Processing</string>
    <string name="confirmation" translatable="false">Confirmation!</string>
    <string name="cntBtn" translatable="false">Are you sure, you want to continue - interview</string>
    <string name="failedUpdateDb" translatable="false">SORRY! Failed to update DB</string>
    <string name="invalidDate" translatable="false">Invalid date!</string>
    <string name="ageCalc" translatable="false">"Both Month and Year don't be zero!!"</string>
    <string name="action_database" translatable="false">Database Manager</string>
    <string name="action_data_sync" translatable="false">Sync Data</string>
    <string name="no"> No </string>
    <string name="dkn"> Don’t Know </string>
    <string name="none"> No one </string>
    <string name="never"> Never</string>
    <string name="na"> Applicable /Not Available</string>
    <string name="nap"> Not Applicable </string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="nav">Not Available </string>
    <string name="ref"> Refused </string>
    <string name="other"> Other </string>
    <string name="specify"> Please explain </string>
    <string name="year"> Year </string>
    <string name="month"> Month </string>
    <string name="weeks"> Week </string>
    <string name="days"> Day </string>
    <string name="hours"> Hour </string>
    <string name="minutes"> Minutes </string>
    <string name="kg"> Kilograms </string>
    <string name="km"> Kilometers </string>
    <string name="cm"> cm </string>
    <string name="in"> Inch </string>
    <string name="rupees"> Rupees </string>
    <string name="num"> Number </string>
    <string name="name"> Name </string>
    <string name="contactnum">Contact Number </string>
    <string name="checkHHpresent"> The name of head of the household corresponds to the line listing data.</string>
    <string name="newHHheadname"> Name of new head of the household </string>
    <string name="istatus"> Result of Household Questionnaire interview </string>
    <string name="istatusa"> Yes </string>
    <string name="istatusb"> Consent Not Provided </string>
    <string name="istatusc"> Household is Not Eligible </string>
    <string name="istatusd"> No eligible Respondent Available </string>
    <string name="istatuse"> Available Eligible Respondent Not Competent For Interview </string>
    <string name="istatus96"> Other (Specify) </string>
    <string name="upd_db_form" translatable="false"> updateDB(Form):\t </string>
    <string name="upd_db_food_consumption" translatable="false"> updateDB(FoodConsumption):\t </string>
    <string name="upd_db_error" translatable="false"> Updating Database… ERROR! </string>
    <string name="db_excp_error" translatable="false"> Database Exception... ERROR! </string>
    <string name="upd_db" translatable="false"> Updating Database...\t </string>
    <string name="fail_db_upd" translatable="false"> Failed to Update Database! </string>
    <string name="backPress" translatable="false"> Back Press Not Allowed </string>
    <string name="invalid_response" translatable="false"> Invalid Response </string>
    <string name="agecal" translatable="false">ageCal:\t</string>
    <string name="network_conn_error" translatable="false"> Network connection not available ! </string>
    <string name="no_mother_selected_child_list" translatable="false"> No Mother has been selected. Please select a mother before opening Child List </string>
    <string name="sec_not_available_moment" translatable="false"> This section is not available at the moment. </string>
    <string name="no_mother_selected_preg_list" translatable="false"> No Mother has been selected. Please select a mother before opening Pregnancy List </string>
    <string name="h220_error" translatable="false"> H220: WRA count does not match Females 20–49. </string>
    <string name="onitemselected" translatable="false"> onItemSelected(Samples):\t </string>
    <string name="upd_samples" translatable="false"> updateDB(Samples):\t </string>
    <string name="upd_anthro" translatable="false"> updateDB(Anthro):\t </string>
    <string name="folder_not_created" translatable="false"> Folder Not Created </string>
    <string name="invalid_password" translatable="false"> Invalid Password </string>
    <string name="username_required" translatable="false"> Username is required. </string>
    <string name="incorrect_username_or_password" translatable="false">Incorrect Username or Password</string>
    <string name="open_hh_form" translatable="false"> Open Household Form </string>
    <string name="open_anhtro_form" translatable="false">Open Anthro Form</string>
    <string name="info_hh_form_not_exist" translatable="false">INFO: Household information does not exist.</string>
    <string name="hh_not_found" translatable="false">Household not Found</string>
    <string name="hh_exists_form" translatable="false"> JSONException(Form): \t </string>
    <string name="w202t2" translatable="false">Probe for the type of person seen and record all answers given.</string>
    <string name="w311t2" translatable="false">Агар аз 24 соат камтар бошад, соатро нависед.</string>
    <string name="instrc3" translatable="false">Варақчаи Гуруҳи Ғизоҳоро истифода баред то ин ки ғизо муайян шавад ки ба кадом гурӯҳ дохил мебошад.</string>
    <string name="modetitle" translatable="false">MODULE E: САНҶИШИ ГЕМОГЛОБИН ВА ҶАМЪОВАРИИ СТУЛ</string>
    <string name="modd"> Module D: Child Under 0 – 23 Months </string>
    <string name="d1"> D1: Under 2 Child Information: </string>
    <string name="dinstrc1">Instructions: Respondent of Module D will be the mother (15–49 years of age) or caregiver of the selected child under-2 years available in the household. </string>
    <string name="dinstrc2">If there are more than one under-2 children available in the household then use Kish grid for selection.</string>
    <string name="dinstrc3">Section D2 ‘IYCF and Food diversity’ will only be filled for children 0–23 months. If the child’s age is 24–59 months, then Section D2 will be skipped.</string>
    <string name="d101">Name of the Child</string>
    <string name="d102">Line number of the Child</string>
    <string name="d103">Line number of the respondent</string>
    <string name="d104"> Relationship of child with the respondent </string>
    <string name="d10401">Mother</string>
    <string name="d10402">Caretaker</string>
    <string name="d105">Was (name’s) birth registered with NADRA and B-form was obtained?</string>
    <string name="d10501">Yes</string>
    <string name="d10502">No</string>
    <string name="d105998">Don’t Know</string>
</resources>