<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <import type="android.view.View" />

        <variable
            name="child"
            type="edu.aku.hassannaqvi.wbcct_baseline.models.Child" />

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_bg_gray"
        android:orientation="vertical">


        <!-- CUSTOM TOOLBAR -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/CustomToolbarTheme"
            app:popupTheme="@style/CustomPopupTheme"
            app:subtitle="@string/d1"
            app:subtitleTextAppearance="@style/Toolbar.SubtitleText"
            app:title="@string/modd"
            app:titleTextAppearance="@style/Toolbar.TitleText" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/GrpName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <!-- dinstrc1  Title   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVdinstrc1"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dinstrc1" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <!-- dinstrc2  Title   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVdinstrc2"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dinstrc2" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <!-- dinstrc3  Title   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVdinstrc3"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dinstrc3" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <!-- d101  Input   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVd101"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:background="@drawable/bottom"
                            android:orientation="vertical">

                            <TextView
                                style="@style/quesNum"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/Q_d101" />

                            <TextView
                                style="@style/sub_labels"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/d101" />

                            <TextView
                                android:id="@+id/d101"
                                style="@style/sub_labels"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@={child.d101}" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:background="@drawable/bottom"
                            android:orientation="vertical">

                            <TextView
                                style="@style/quesNum"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/Q_d102" />

                            <TextView
                                style="@style/sub_labels"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/d102" />

                            <TextView
                                android:id="@+id/d102"
                                style="@style/sub_labels"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@={child.d102}" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:background="@drawable/bottom"
                            android:orientation="vertical">

                            <TextView
                                style="@style/quesNum"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/Q_d103" />

                            <TextView
                                style="@style/sub_labels"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/d103" />

                            <TextView
                                android:id="@+id/d103"
                                style="@style/sub_labels"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@={child.d103}" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <!-- d102  Input-Numeric   -->
                <!--<androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVd102"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Q_d102" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/d102" />

                        <com.edittextpicker.aliazaz.EditTextPicker
                            android:id="@+id/d102"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:hint="###"
                            android:inputType="number"
                            android:maxLength="3"
                            android:text="@={child.d102}"
                            app:maxValue="100"
                            app:minValue="1"
                            app:type="range" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                &lt;!&ndash; d103  Input-Numeric   &ndash;&gt;
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVd103"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Q_d103" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/d103" />

                        <com.edittextpicker.aliazaz.EditTextPicker
                            android:id="@+id/d103"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:hint="###"
                            android:inputType="number"
                            android:maxLength="3"
                            android:text="@={child.d103}"
                            app:maxValue="100"
                            app:minValue="1"
                            app:type="range" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>-->


                <!-- d104  Radio   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVd104"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bottom"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/quesNum"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/Q_d104" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/d104" />

                        </LinearLayout>

                        <RadioGroup
                            android:id="@+id/d104"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/d10401"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:checked="@{child.d104.equals(`1`)}"
                                android:enabled="false"
                                android:onClick="@{()->child.setD104(`1`)}"
                                android:text="@string/d10401" />

                            <RadioButton
                                android:id="@+id/d10402"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:checked="@{child.d104.equals(`2`)}"
                                android:enabled="false"
                                android:onClick="@{()->child.setD104(`2`)}"
                                android:text="@string/d10402" />

                        </RadioGroup>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <!-- d105  Radio   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVd105"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bottom"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/quesNum"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/Q_d105" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/d105" />

                        </LinearLayout>

                        <RadioGroup
                            android:id="@+id/d105"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/d10501"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:checked="@{child.d105.equals(`1`)}"
                                android:onClick="@{()->child.setD105(`1`)}"
                                android:text="@string/d10501" />

                            <RadioButton
                                android:id="@+id/d10502"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:checked="@{child.d105.equals(`2`)}"
                                android:onClick="@{()->child.setD105(`2`)}"
                                android:text="@string/d10502" />

                            <RadioButton
                                android:id="@+id/d105998"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:checked="@{child.d105.equals(`998`)}"
                                android:onClick="@{()->child.setD105(`998`)}"
                                android:text="@string/d105998" />

                        </RadioGroup>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <!--EndButton LinearLayout-->
                <LinearLayout
                    android:id="@+id/llbtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal"
                    android:padding="24dp">

                    <Button
                        android:id="@+id/btn_End"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:onClick="btnEnd"
                        android:text="Cancel"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_Continue"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/capsule"
                        android:backgroundTint="@color/colorAccent"
                        android:backgroundTintMode="src_atop"
                        android:gravity="center"
                        android:onClick="btnContinue"
                        android:text="Save"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>
                <!--EndButton LinearLayout-->


            </LinearLayout>


        </ScrollView>


    </LinearLayout>


</layout>